nginx/nginx-full.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
      app: nginx
      type: front-end
spec:
  template:

    metadata:
     name: nginx-pod
     labels:
        app: nginx
        type: front-end
    spec:
      containers:
      - name: nginx-container
        image: nginx
        volumeMounts:
          - name: nfs-volume
            mountPath: /usr/share/nginx/html
      volumes:
        - name: nfs-volume
          persistentVolumeClaim:
            claimName: nginx-nfs-pvc

  #replicas: 3
  selector:
      matchLabels:
        app: nginx 
        type: front-end

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service

spec:
  type: ClusterIP
  ports:
   - targetPort: 80
     port: 80

  selector:
     app: nginx
     type: front-end
