nginx/nginx-hello-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-service

# spec:
#   type: ClusterIP
#   ports:
#    - targetPort: 80
#      port: 8082
#   selector:
#      app: nginx-hello
#      type: front-end

spec:
  type: NodePort
  ports:
   - targetPort: 80
     port: 30080
  selector:
     app: nginx-hello
     type: front-end
